--- a/index.ipynb
+++ b/index.ipynb
@@ -44,8 +44,8 @@
    "source": [
     "import pandas\n",
     "file_name = './cities.xlsx'\n",
-    "travel_df = pandas.read_excel(file_name)\n",
-    "cities = travel_df.to_dict('records')"
+    "#travel_df = pandas.read_excel(file_name)\n",
+    "#cities = travel_df.to_dict('records')"
    ]
   },
   {
