--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
     "file_name = './cities.xlsx'\n",
     "#travel_df = pandas.read_excel(file_name)\n",
     "#cities = travel_df.to_dict('records')\n",
-    "travel_df=pandas.read_excel"
+    "travel_df=pandas.read_excel(file_name)"
    ]
   },
   {
