Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,8 @@
     "file_name = './cities.xlsx'\n",
     "#travel_df = pandas.read_excel(file_name)\n",
     "#cities = travel_df.to_dict('records')\n",
-    "travel_df=pandas.read_excel(file_name)"
+    "travel_df=pandas.read_excel(file_name)\n",
+    "cities=travel_df.to_di"
    ]
   },
   {
