--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "#travel_df = pandas.read_excel(file_name)\n",
     "#cities = travel_df.to_dict('records')\n",
     "travel_df=pandas.read_excel(file_name)\n",
-    "cities=travel_df.to_di"
+    "cities=travel_df.to_dict('records')"
    ]
   },
   {
