--- a/index.ipynb
+++ b/index.ipynb
@@ -210,28 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append(str(city_indices[i])+'.'+' '+city_names[i])    \n",
+    "    names_and_ranks.append(str(city_indices[i]+1)+'.'+' '+city_names[i])    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11. Iguazu Falls'"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
