--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for i in range(12):\n",
+    "    "
    ]
   },
   {
