--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "city_populations = []\n",
     "for i in range(12):\n",
-    "    ci"
+    "    city_populations.append(cities)"
    ]
   },
   {
