Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "city_areas = []\n",
     "for i in range(12):\n",
-    "    city_areas[]"
+    "    city_areas.append(cities[i][])"
    ]
   },
   {
